# vlm-eval-immersive-analytics

./: .gitignore  README.md
vlm-chart-renderer/Assets/Editor/: ChartRenderer.cs
vlm-chart-renderer/Assets/Scripts/: ChartData.cs  ChartUtils.cs
vlm-chart-renderer/Assets/Scripts/Charts/: AreaChart3D.cs  BarChart3D.cs  HeatmapSurface3D.cs  LineChart3D.cs  ScatterPlot3D.cs  StackedBarChart3D.cs
vlm-chart-renderer/ProjectSettings/: ProjectSettings.asset
vlm-eval-pipeline/: .env.example  .gitignore  README.md  generate_report_pdf.py  pyproject.toml
vlm-eval-pipeline/configs/: default.yaml
vlm-eval-pipeline/docs/: presentation_script.md  status_report.md
vlm-eval-pipeline/results/figures/: summary_table.csv
vlm-eval-pipeline/src/vlm_eval/: __init__.py  __main__.py  config.py  pipeline.py  visualization.py
vlm-eval-pipeline/src/vlm_eval/evaluation/: __init__.py  metrics.py  scorer.py
vlm-eval-pipeline/src/vlm_eval/models/: __init__.py  base.py  clients.py
vlm-eval-pipeline/src/vlm_eval/stimuli/: chart_generator.py  chart_generator_3d.py  chart_generator_chartx.py  chart_generator_chartx_3d.py  chart_generator_unity.py  chartx_loader.py
vlm-eval-pipeline/src/vlm_eval/storage/: __init__.py  store.py
